--- a/app/src/main/res/layout/activity_slide_show_org4.xml
+++ b/app/src/main/res/layout/activity_slide_show_org4.xml
@@ -52,30 +52,40 @@
             android:orientation="horizontal">
 
 
-
-
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/Signup"
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/purple_frame"
-                android:text="Sign Up"
+                android:layout_width="0dp"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black" />
+                android:layout_height="wrap_content"
+                android:text="Signup"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_marginRight="20dp"
+                android:padding="12dp"
+                app:strokeColor="#8870BD"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
 
-
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/Login"
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/purple_frame"
-                android:text="Log In"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:padding="12dp"
+                app:strokeColor="#8870BD"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
 
         </LinearLayout>
     </LinearLayout>
