--- a/app/src/main/res/drawable/purple_frame.xml
+++ b/app/src/main/res/drawable/purple_frame.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
-    <stroke android:width="2dp" android:color="@color/blueViolet" />
-    <corners android:radius="5dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke android:width="5px" android:color="#9C27B0" />
 </shape>
-
-
