--- a/app/src/main/res/layout/activity_slide_show_act3.xml
+++ b/app/src/main/res/layout/activity_slide_show_act3.xml
@@ -41,6 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="107dp"
             android:layout_margin="20dp"
+            android:textAlignment="center"
+
             android:layout_marginBottom="100dp"
             android:text="Your safety is our top priority! Only approved organizations are allowed to post events on the app, and users under 16 need to sign a parental consent waiver."
             android:textColor="@android:color/darker_gray"
@@ -53,28 +55,40 @@
             android:layout_margin="2dp"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/SkipBtn"
-                android:layout_width="10dp"
+                android:layout_width="0dp"
+                android:textAllCaps="false"
                 android:layout_height="wrap_content"
                 android:text="Skip"
-                android:textAllCaps="false"
-                android:background="@drawable/yellow_frame"
-                android:textColor="@android:color/black"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_marginRight="20dp"
+                android:padding="12dp"
+                app:strokeColor="#FED600"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
-                android:layout_margin="10dp"/>
-
-
-            <Button
                 android:id="@+id/NextBtn"
-                android:layout_width="10dp"
+                android:textAllCaps="false"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Next"
-                android:textAllCaps="false"
-                android:background="@drawable/yellow_frame"
-                android:textColor="@android:color/black"
-                android:layout_weight="1"
-                android:layout_margin="10dp"/>
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:padding="12dp"
+                app:strokeColor="#FED600"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
 
         </LinearLayout>
     </LinearLayout>
