--- a/app/src/main/res/layout/activity_slide_show_act5.xml
+++ b/app/src/main/res/layout/activity_slide_show_act5.xml
@@ -33,7 +33,7 @@
             android:layout_marginBottom="10dp"
             android:text="Become the activist that you have always wanted to be!"
             android:textColor="@android:color/black"
-            android:textSize="36sp"
+            android:textSize="32sp"
             android:gravity="center"
             android:textStyle="bold" />
 
@@ -42,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="107dp"
             android:layout_margin="20dp"
+            android:textAlignment="center"
             android:layout_marginBottom="100dp"
             android:text="Find your perfect match with the right activism opportunity for you!"
             android:textColor="@android:color/darker_gray"
@@ -54,28 +55,40 @@
             android:layout_margin="2dp"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/Signup"
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/yellow_frame"
-                android:text="Sign Up"
+                android:layout_width="0dp"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black" />
+                android:layout_height="wrap_content"
+                android:text="Signup"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_marginRight="20dp"
+                android:padding="12dp"
+                app:strokeColor="#FED600"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
 
-
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/Login"
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/yellow_frame"
-                android:text="Log In"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:padding="12dp"
+                app:strokeColor="#FED600"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
 
         </LinearLayout>
     </LinearLayout>
