--- a/app/src/main/res/layout/activity_slide_show_org3.xml
+++ b/app/src/main/res/layout/activity_slide_show_org3.xml
@@ -40,6 +40,7 @@
             android:layout_height="107dp"
             android:layout_margin="20dp"
             android:layout_marginBottom="100dp"
+            android:textAlignment="center"
             android:text="We give each organization the opportunity to view the analytics for their campaigns and manage them in an easy way. These features will be able to help you manage your campaign in a more efficient way."
             android:textColor="@android:color/darker_gray"
             android:textSize="18sp"
@@ -51,28 +52,40 @@
             android:layout_margin="2dp"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/SkipBtn"
-                android:layout_width="10dp"
+                android:layout_width="0dp"
+                android:textAllCaps="false"
                 android:layout_height="wrap_content"
                 android:text="Skip"
-                android:textAllCaps="false"
-                android:background="@drawable/purple_frame"
-                android:textColor="@android:color/black"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_marginRight="20dp"
+                android:padding="12dp"
+                app:strokeColor="#8870BD"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
-                android:layout_margin="10dp"/>
-
-
-            <Button
                 android:id="@+id/NextBtn"
-                android:layout_width="10dp"
+                android:textAllCaps="false"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Next"
-                android:textAllCaps="false"
-                android:background="@drawable/purple_frame"
-                android:textColor="@android:color/black"
-                android:layout_weight="1"
-                android:layout_margin="10dp"/>
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:padding="12dp"
+                app:strokeColor="#8870BD"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
 
         </LinearLayout>
     </LinearLayout>
