--- a/app/src/main/res/layout/activity_sign_up_organization.xml
+++ b/app/src/main/res/layout/activity_sign_up_organization.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -184,6 +191,38 @@
                 android:text="@string/checkBoxText" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/doaccounthave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:text="All ready have an account? "
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/createnewaccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:onClick="GoMain"
+                android:paddingTop="20dp"
+                android:text="@string/Log_In"
+                android:paddingBottom="20dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/signup"
             android:layout_width="200dp"
@@ -198,7 +237,11 @@
             android:onClick="goToHome"
             android:padding="12dp"/>
 
+
+
     </LinearLayout>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
