--- a/app/src/main/res/layout/activity_start_every_thing.xml
+++ b/app/src/main/res/layout/activity_start_every_thing.xml
@@ -6,101 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".StartEveryThing">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/gradient_background">
+
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="189dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp"
+            app:srcCompat="@drawable/screenshot_2023_06_25_at_18_35_1" />
+
+        <TextView
+            android:id="@+id/welcomeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="79dp"
+            android:layout_marginBottom="10dp"
+            android:text="Welcome To Acteen!"
+            android:textColor="@android:color/black"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/descriptionTV"
+            android:layout_width="wrap_content"
+            android:layout_height="107dp"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="100dp"
+            android:text="The app that connects teenagers to activism opportunities in their area, to make activism an accessible and easy to do."
+            android:textColor="@android:color/darker_gray"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradient_background"
-            android:gravity="center"
-            android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:orientation="horizontal">
 
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="189dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="30dp"
-                app:srcCompat="@drawable/screenshot_2023_06_25_at_18_35_1" />
-
-            <TextView
-                android:id="@+id/welcomeTV"
-                android:layout_width="wrap_content"
-                android:layout_height="79dp"
-                android:layout_marginBottom="10dp"
-                android:text="Welcome To Acteen!"
-                android:textColor="@android:color/black"
-                android:textSize="32sp"
-                android:textStyle="bold" />
-
-
-            <TextView
-                android:id="@+id/descriptionTV"
-                android:layout_width="wrap_content"
-                android:layout_height="107dp"
-                android:layout_margin="20dp"
-                android:layout_marginBottom="100dp"
-                android:text="The app that connects teenagers to activism opportunities in their area, to make activism an accessible and easy to do."
-                android:textAlignment="center"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/Activist"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:orientation="horizontal">
+                android:text="Activist"
+                android:textAllCaps="false"
+                android:clickable="true"
+                android:background="@drawable/yellow_frame"
+                android:textColor="@android:color/black"
+                android:layout_weight="1"
+                android:layout_margin="10dp"/>
 
 
-
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_weight="1"
-                    android:id="@+id/Activist"
-                    android:layout_width="0dp"
-                    android:textAllCaps="false"
-                    android:layout_height="wrap_content"
-                    android:text="Activist"
-                    android:textColor="@color/Black"
-                    android:textSize="15sp"
-                    android:layout_marginRight="20dp"
-                    android:padding="12dp"
-                    app:strokeColor="#FED600"
-                    app:backgroundTint="@android:color/transparent"
-                    app:cornerRadius="3dp"
-                    app:rippleColor="#33AAAAAA"
-                    app:strokeWidth="2dp" />
-
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_weight="1"
-                    android:id="@+id/Organization"
-                    android:textAllCaps="false"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Organization"
-                    android:textColor="@color/Black"
-                    android:textSize="15sp"
-                    android:padding="12dp"
-                    app:strokeColor="#FED600"
-                    app:backgroundTint="@android:color/transparent"
-                    app:cornerRadius="3dp"
-                    app:rippleColor="#33AAAAAA"
-                    app:strokeWidth="2dp" />
+            <Button
+                android:id="@+id/Organization"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Organization"
+                android:textAllCaps="false"
+                android:background="@drawable/yellow_frame"
+                android:textColor="@android:color/black"
+                android:clickable="true"
+                android:layout_weight="1"
+                android:layout_margin="10dp"/>
 
 
-
-
-            </LinearLayout>
         </LinearLayout>
-    </FrameLayout>
-
-
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
