--- a/app/src/main/res/layout/activity_start_every_thing.xml
+++ b/app/src/main/res/layout/activity_start_every_thing.xml
@@ -49,37 +49,45 @@
             android:textStyle="bold" />
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_weight="1"
                 android:id="@+id/Activist"
                 android:layout_width="0dp"
+                android:textAllCaps="false"
                 android:layout_height="wrap_content"
                 android:text="Activist"
-                android:textAllCaps="false"
-                android:clickable="true"
-                android:background="@drawable/yellow_frame"
-                android:textColor="@android:color/black"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_marginRight="20dp"
+                android:padding="12dp"
+                app:strokeColor="#FFEB3B"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
-                android:layout_margin="10dp"/>
-
-
-            <Button
                 android:id="@+id/Organization"
+                android:textAllCaps="false"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Organization"
-                android:textAllCaps="false"
-                android:background="@drawable/yellow_frame"
-                android:textColor="@android:color/black"
-                android:clickable="true"
-                android:layout_weight="1"
-                android:layout_margin="10dp"/>
-
-
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:padding="12dp"
+                app:strokeColor="#FFEB3B"
+                app:backgroundTint="@android:color/transparent"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                app:strokeWidth="2dp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
