--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,6 +11,10 @@
 
 
     </style>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 
     <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
         <item name="cornerFamily">rounded</item>
