--- a/app/src/main/res/drawable/tag_event_background.xml
+++ b/app/src/main/res/drawable/tag_event_background.xml
@@ -3,15 +3,12 @@
 
 <item>
     <shape android:shape="rectangle" >
-        <solid android:color="#191D21" />
+        <solid android:color="#000000" />
         <corners
             android:bottomLeftRadius="30dp"
             android:bottomRightRadius="30dp"
             android:topLeftRadius="30dp"
-            android:topRightRadius="30dp"
-            />
+            android:topRightRadius="30dp" />
     </shape>
 </item>
-
-
 </layer-list>
