--- a/app/src/main/res/layout/activity_campaign_analytics_org.xml
+++ b/app/src/main/res/layout/activity_campaign_analytics_org.xml
@@ -40,6 +40,13 @@
 
 
     </RelativeLayout>
+
+
+    <include
+        layout="@layout/bottom_navigation_organ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
 
 
