--- a/app/src/main/res/layout/activity_start_every_thing.xml
+++ b/app/src/main/res/layout/activity_start_every_thing.xml
@@ -33,7 +33,7 @@
             android:layout_marginBottom="10dp"
             android:text="Welcome To Acteen!"
             android:textColor="@android:color/black"
-            android:textSize="36sp"
+            android:textSize="32sp"
             android:textStyle="bold" />
 
 
@@ -66,7 +66,7 @@
                 android:textSize="15sp"
                 android:layout_marginRight="20dp"
                 android:padding="12dp"
-                app:strokeColor="#FFEB3B"
+                app:strokeColor="#FED600"
                 app:backgroundTint="@android:color/transparent"
                 app:cornerRadius="3dp"
                 app:rippleColor="#33AAAAAA"
@@ -83,7 +83,7 @@
                 android:textColor="@color/Black"
                 android:textSize="15sp"
                 android:padding="12dp"
-                app:strokeColor="#FFEB3B"
+                app:strokeColor="#FED600"
                 app:backgroundTint="@android:color/transparent"
                 app:cornerRadius="3dp"
                 app:rippleColor="#33AAAAAA"
