--- a/app/src/main/res/layout/activity_slide_show_act1.xml
+++ b/app/src/main/res/layout/activity_slide_show_act1.xml
@@ -55,6 +55,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
                 android:id="@+id/SkipBtn"
+                android:layout_margin="10dp"
                 android:layout_width="0dp"
                 android:textAllCaps="false"
                 android:layout_height="wrap_content"
@@ -79,6 +80,7 @@
                 android:text="Next"
                 android:textColor="@color/Black"
                 android:textSize="15sp"
+                android:layout_margin="10dp"
                 android:padding="12dp"
                 app:strokeColor="#FED600"
                 app:backgroundTint="@android:color/transparent"
