--- a/app/src/main/res/layout/activity_slide_show_act3.xml
+++ b/app/src/main/res/layout/activity_slide_show_act3.xml
@@ -61,6 +61,7 @@
                 android:id="@+id/SkipBtn"
                 android:layout_width="0dp"
                 android:textAllCaps="false"
+                android:layout_margin="10dp"
                 android:layout_height="wrap_content"
                 android:text="Skip"
                 android:textColor="@color/Black"
@@ -78,6 +79,7 @@
                 android:layout_weight="1"
                 android:id="@+id/NextBtn"
                 android:textAllCaps="false"
+                android:layout_margin="10dp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Next"
