--- a/app/src/main/res/layout/activity_slide_show_act4.xml
+++ b/app/src/main/res/layout/activity_slide_show_act4.xml
@@ -64,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:text="Skip"
                 android:textColor="@color/Black"
+                android:layout_margin="10dp"
                 android:textSize="15sp"
                 android:layout_marginRight="20dp"
                 android:padding="12dp"
@@ -77,6 +78,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
                 android:id="@+id/NextBtn"
+                android:layout_margin="10dp"
                 android:textAllCaps="false"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
