--- a/app/src/main/res/layout/activity_slide_show_org2.xml
+++ b/app/src/main/res/layout/activity_slide_show_org2.xml
@@ -59,6 +59,7 @@
                 android:id="@+id/SkipBtn"
                 android:layout_width="0dp"
                 android:textAllCaps="false"
+                android:layout_margin="10dp"
                 android:layout_height="wrap_content"
                 android:text="Skip"
                 android:textColor="@color/Black"
@@ -85,6 +86,7 @@
                 app:strokeColor="#8870BD"
                 app:backgroundTint="@android:color/transparent"
                 app:cornerRadius="3dp"
+                android:layout_margin="10dp"
                 app:rippleColor="#33AAAAAA"
                 app:strokeWidth="2dp" />
 
