--- a/app/src/main/res/layout/activity_slide_show_act5.xml
+++ b/app/src/main/res/layout/activity_slide_show_act5.xml
@@ -68,6 +68,7 @@
                 android:layout_marginRight="20dp"
                 android:padding="12dp"
                 app:strokeColor="#FED600"
+                android:layout_margin="10dp"
                 app:backgroundTint="@android:color/transparent"
                 app:cornerRadius="3dp"
                 app:rippleColor="#33AAAAAA"
@@ -81,6 +82,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Login"
+                android:layout_margin="10dp"
                 android:textColor="@color/Black"
                 android:textSize="15sp"
                 android:padding="12dp"
