--- a/app/src/main/res/layout/activity_slide_show_org4.xml
+++ b/app/src/main/res/layout/activity_slide_show_org4.xml
@@ -57,6 +57,7 @@
                 android:layout_weight="1"
                 android:id="@+id/Signup"
                 android:layout_width="0dp"
+                android:layout_margin="10dp"
                 android:textAllCaps="false"
                 android:layout_height="wrap_content"
                 android:text="Signup"
@@ -76,6 +77,7 @@
                 android:id="@+id/Login"
                 android:textAllCaps="false"
                 android:layout_width="0dp"
+                android:layout_margin="10dp"
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:textColor="@color/Black"
