--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="20dp"
     tools:context=".homepage.homeorganization.AddEventOrgActivity">
 
     <LinearLayout
@@ -15,9 +16,11 @@
         <!---EditText: input post title-->
         <EditText
             android:id = "@+id/pTitleEt"
-            android:padding="20dp"
+            android:layout_marginTop="60dp"
             android:hint="Enter title"
             android:singleLine="true"
+            android:background="@drawable/edittext_background"
+            android:padding="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -30,6 +33,47 @@
             android:minHeight="200dp"
             android:clickable="true"
             android:focusable="true"/>
+
+    <!--    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_weight="1"
+                android:id="@+id/pLocationBtn"
+                android:textAllCaps="false"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Add Location"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_margin="10dp"
+                android:padding="12dp"
+                app:backgroundTint="#8E8E8E"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_weight="1"
+                android:id="@+id/pImageIv"
+                android:textAllCaps="false"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Add Image"
+                android:textColor="@color/Black"
+                android:textSize="15sp"
+                android:layout_margin="10dp"
+                android:padding="12dp"
+                app:backgroundTint="#8E8E8E"
+                app:cornerRadius="3dp"
+                app:rippleColor="#33AAAAAA"
+                 />
+
+        </LinearLayout>-->
 
 
     <LinearLayout
@@ -48,6 +92,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight = "1"/>
+
+
 
 
     </LinearLayout>
