--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -45,11 +45,16 @@
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginLeft="10dp"
+              android:layout_marginLeft="15dp"
               android:layout_marginTop="20dp"
               android:orientation="vertical">
 
 
+              <LinearLayout
+                  android:layout_width="wrap_content"
+                  android:layout_marginTop="10dp"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
                   <TextView
                       android:id="@+id/name_activist"
                       android:layout_width="wrap_content"
@@ -60,6 +65,15 @@
                       android:maxLines="1"
                       android:textSize="18sp"
                       android:textStyle="bold" />
+
+                  <ImageView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:src="@drawable/icon_settings"
+                      android:id="@+id/settingsIcon"
+                      android:layout_marginLeft="40dp" />
+
+              </LinearLayout>
 
 
 
@@ -81,7 +95,7 @@
                   <Button
                       android:id="@+id/editprofile_button"
                       android:textAllCaps="false"
-                      android:layout_width="80dp"
+                      android:layout_width="85dp"
                       android:layout_marginTop="10dp"
                       android:theme="@style/editProfileButton"
                       android:background="@drawable/editprofile_background"
@@ -89,95 +103,31 @@
                       android:minHeight="0dp"
                       android:insetTop="1dp"
                       android:insetBottom="1dp"
-                      android:textSize="7sp"
+                      android:textSize="7.5sp"
                       android:textColor="@color/black"
-                      android:text="Edit Profile" />
+                      android:text="Edit Profile"
+                      android:textStyle="bold"
+                      />
 
 
 
 
           </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="150dp"
-        android:layout_width="match_parent"
+
+
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_marginTop="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="30dp"
-            android:elevation="5dp"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/myTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="16sp"
-                android:text="Private Account" />
-
-            <Switch
-                android:id="@+id/mySwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"/>
-
-        </LinearLayout>
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="40dp"
-            android:elevation="5dp"
-            android:layout_marginTop="30dp"
-
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/myTextView1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="16sp"
-                android:text="Notifcations" />
-
-            <Switch
-                android:id="@+id/mySwitch1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"/>
-
-        </LinearLayout>
-    </LinearLayout>
-
-
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center|bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="80dp"
-        android:layout_centerHorizontal="true">
-
-        <Button
-            android:id="@+id/buttonHabibi"
-            android:textAllCaps="false"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="Sign Out" />
-
-    </RelativeLayout>
-
-
+        android:layout_centerHorizontal="true"
+        android:adjustViewBounds="true"
+        android:maxWidth="1000dp"
+        android:maxHeight="320dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/profile_liked_posts" />
 
 
 </RelativeLayout>
