nevo code for nevo its thursday, its 2:00 pm me and nevo are chilling , the demo day is tommorow , we are all hyped, thank you nevo for this amazing journey, thx to my team PM's and UXers and Designers, i love you all, thx to larine for coding with us, thx lyel for helping us with the code, yossi and ibrahim the amazing TA's, our cordinators, and to this whole journey, about 150 commits of shitty and unreliable code, but at the end, we enjoyed a lot
for the future me and future nevo

WE DID GREAT HABIBI <3

--- a/app/src/main/res/layout/activity_settings_page_activist.xml
+++ b/app/src/main/res/layout/activity_settings_page_activist.xml
@@ -94,7 +94,8 @@
             android:textAllCaps="false"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Sign Out" />
+            android:textColor="@color/black"
+            android:text="Log Out" />
 
     </RelativeLayout>
 
