--- a/app/src/main/res/layout/activity_slide_show_act1.xml
+++ b/app/src/main/res/layout/activity_slide_show_act1.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="10dp"
             android:text="Find an Opportunity!"
             android:textColor="@android:color/black"
-            android:textSize="36sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
 
@@ -40,6 +40,7 @@
             android:layout_height="107dp"
             android:layout_margin="20dp"
             android:layout_marginBottom="100dp"
+            android:textAlignment="center"
             android:text="We’ve got a collection of over 100 activism opportunities for you to choose from!"
             android:textColor="@android:color/darker_gray"
             android:textSize="18sp"
@@ -48,7 +49,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
