--- a/app/src/main/res/layout/activity_slide_show_act2.xml
+++ b/app/src/main/res/layout/activity_slide_show_act2.xml
@@ -40,6 +40,7 @@
             android:layout_height="107dp"
             android:layout_margin="20dp"
             android:layout_marginBottom="100dp"
+            android:textAlignment="center"
             android:text="Sign up for the opportunity you would like to attend and connect it to your calendar so that you will be reminded of it before it happens."
             android:textColor="@android:color/darker_gray"
             android:textSize="18sp"
@@ -48,7 +49,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
