--- a/app/src/main/res/layout/activity_slide_show_act3.xml
+++ b/app/src/main/res/layout/activity_slide_show_act3.xml
@@ -42,7 +42,6 @@
             android:layout_height="107dp"
             android:layout_margin="20dp"
             android:textAlignment="center"
-
             android:layout_marginBottom="100dp"
             android:text="Your safety is our top priority! Only approved organizations are allowed to post events on the app, and users under 16 need to sign a parental consent waiver."
             android:textColor="@android:color/darker_gray"
@@ -52,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
