--- a/app/src/main/res/layout/activity_slide_show_act4.xml
+++ b/app/src/main/res/layout/activity_slide_show_act4.xml
@@ -51,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal">
 
 
