--- a/app/src/main/res/layout/activity_slide_show_org3.xml
+++ b/app/src/main/res/layout/activity_slide_show_org3.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="10dp"
             android:text="Manage Campaigns"
             android:textColor="@android:color/black"
-            android:textSize="36sp"
+            android:textSize="32sp"
             android:textStyle="bold" />
 
 
@@ -49,7 +49,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
