--- a/app/src/main/res/layout/activity_slide_show_org4.xml
+++ b/app/src/main/res/layout/activity_slide_show_org4.xml
@@ -43,12 +43,13 @@
             android:text="Start posting your opportunities today!"
             android:textColor="@android:color/darker_gray"
             android:textSize="18sp"
+            android:textAlignment="center"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal">
 
 
