--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -18,7 +18,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:layout_gravity="center_vertical"
         android:orientation="vertical">
         <LinearLayout
@@ -73,7 +72,6 @@
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
-
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/pDateTv"
@@ -94,6 +92,7 @@
                 android:layout_marginBottom="5dp"
             android:text="Location"
             android:autoLink="all"
+                android:maxLines="1"
             android:textColor="@color/gray"/>
         </LinearLayout>
     </LinearLayout>
