--- a/app/src/main/res/layout/activity_campaign_analytics_org.xml
+++ b/app/src/main/res/layout/activity_campaign_analytics_org.xml
@@ -5,12 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/img_9"
+        android:contentDescription="@string/back_button_description" />
+
+
     <LinearLayout
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
+
         <TextView
             android:text="Campaign Analytics"
             android:layout_width="match_parent"
