--- a/app/src/main/res/layout/activity_subscription_service_org.xml
+++ b/app/src/main/res/layout/activity_subscription_service_org.xml
@@ -4,11 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/img_9"
+        android:contentDescription="@string/back_button_description" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:gravity="center">
+
+
         <TextView
             android:id="@+id/name_org"
             android:layout_width="wrap_content"
@@ -24,6 +35,10 @@
     </RelativeLayout>
 
 
-
+    <include
+        layout="@layout/bottom_navigation_organ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
